Logout e redirecionamento de páginas pós login

--- a/ListaTelefonicaClient/ListaTelefonicaClient/ListaTelefonicaClient.csproj
+++ b/ListaTelefonicaClient/ListaTelefonicaClient/ListaTelefonicaClient.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="jquery.inputmask" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
