Correção registro e criação da base inicial

--- a/ListaTelefonicaAPI/ListaTelefonicaAPI/appsettings.json
+++ b/ListaTelefonicaAPI/ListaTelefonicaAPI/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PingListaTelefonicaApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "TokenConfigurations": {
-    "Audience": "ExemploAudience",
-    "Issuer": "ExemploIssuer",
+    "Audience": "Au",
+    "Issuer": "Is",
     "Seconds": 120
   },
   "Logging": {
