--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,19 @@ $RECYCLE.BIN/
 # Operating System Files
 # =========================
 
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+thumb/
+
 /ListaTelefonicaAPI/.vs/ListaTelefonicaAPI/v15/Server/sqlite3/db.lock
 ListaTelefonicaAPI/.vs/ListaTelefonicaAPI/v15/Server/sqlite3/*
 /ListaTelefonicaClient/.vs/ListaTelefonicaClient/v15/Server/sqlite3/db.lock
